Nav bar align fix

--- a/main.css
+++ b/main.css
@@ -433,6 +433,10 @@ footer {
     
 
 @media only screen and (max-width: 700px) {
+    nav {
+        line-height: 0px;
+    }
+    
     label {
         display: block;
         cursor: pointer;
@@ -442,6 +446,7 @@ footer {
         text-align: center;
         width: 100%;
         display: none;
+
     }
 
     .menu a {
